tests/lean/implicitTypePos.lean
def f x y := 0

def g (x y z) := 0 + x + z

def h {α β} (a : α) := a

def r {{α β}} (a : α) := a
